--- a/views/index.ejs
+++ b/views/index.ejs
@@ -104,7 +104,7 @@
                             <h2 class="fw-bold mb-0">Check your email!</h2>
                             <ul class="d-grid gap-4 my-5 list-unstyled small">
                                 <li class="d-flex gap-4">
-                                    <img src="/img/email-sent.png" alt="Icon" width="48" height="48"
+                                    <img src="/public/img/email-sent.png" alt="Icon" width="48" height="48"
                                         class="text-body-secondary flex-shrink-0">
                                     <div>
                                         <h5 class="mb-0">Email sent!</h5>
