--- a/public/css/background.css
+++ b/public/css/background.css
@@ -1,4 +1,4 @@
 body {
-    background: url('/img/EV3.jpeg') no-repeat center center fixed;
+    background: url('/img/wallpaper.png') no-repeat center center fixed;
     background-size: cover;
 }
