--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,25 +1,26 @@
-.gradient-custom-2 {
-    background: #fccb90;
-    background: -webkit-linear-gradient(to right, #40afc8, #1e6cd2, #2d24d8, #150973);
-    background: linear-gradient(to right, #40afc8, #1e6cd2, #2d24d8, #150973);
-  }
+.container {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+}
 
-  /* Curved edge for mobile */
-  @media (max-width: 991.98px) {
-    .gradient-border {
-      border-top-right-radius: 0;
-      border-bottom-right-radius: .3rem;
-      border-top-left-radius: 0;
-      border-bottom-left-radius: .3rem;
-    }
+/* Curved edge for mobile */
+@media (max-width: 991.98px) {
+  .gradient-border {
+    border-top-right-radius: 0;
+    border-bottom-right-radius: .3rem;
+    border-top-left-radius: 0;
+    border-bottom-left-radius: .3rem;
   }
+}
 
-  /* Curved edge for desktop */
-  @media (min-width: 992px) {
-    .gradient-border {
-      border-top-right-radius: .3rem;
-      border-bottom-right-radius: .3rem;
-      border-top-left-radius: 0;
-      border-bottom-left-radius: 0;
-    }
+/* Curved edge for desktop */
+@media (min-width: 992px) {
+  .gradient-border {
+    border-top-right-radius: .8rem;
+    border-bottom-right-radius: .8rem;
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
   }
+}
