--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,45 +1,34 @@
-    <%- include('template/header') %>
-    <div class="container py-5">
-        <div class="d-flex justify-content-center align-items-center">
-            <div class="card-body p-md-5 mx-md-4 vh-100 d-flex flex-column justify-content-center">
-                <div class="text-center">
-                    <img src="/img/logo.png" style="width: 185px;" alt="logo">
-                    <h4 class="mt-3 mb-2 pb-1">Welcome to LEGO Control.</h4>
-                </div>
-
-                <form action="/login" method="post">
-                    <p>Please login to your account</p>
-                    <div class="form-outline mb-4">
-                        <input type="text" id="identifier" name="identifier"
-                            class="form-control" placeholder="Enter your username or email"
-                            required />
-                        <label class="form-label" for="identifier">Username or
-                            Email</label>
-                    </div>
-                    <div class="form-outline mb-4">
-                        <input type="password" id="password" name="password"
-                            class="form-control" placeholder="Enter your Password"
-                            required />
-                        <label class="form-label" for="password">Password</label>
-                    </div>
-                    <div class="text-center pt-1 mb-1 pb-1">
-                        <button
-                            class="btn btn-primary btn-block fa-lg gradient-custom-2 mb-3"
-                            type="submit">Login</button>
-                    </div>
-                    <div class="text-center mb-5">
-                        <a class="text-muted" href="javascript:void(0);"
-                            id="forgotPasswordLink">Forgot password?</a>
-                    </div>
-                </form>
-
-                <div class="d-flex align-items-center justify-content-center pb-4">
-                    <p class="mb-0 me-2">Don't have an account?</p>
-                    <button type="button" class="btn btn-outline-info"
-                        data-bs-toggle="modal" data-bs-target="#signupModal">Create
-                        new</button>
-                </div>
+<%- include('template/header') %>
+    <div class="container">
+        <div class="d-flex flex-column flex-md-row justify-content-center align-items-center w-100 h-100">
+            <div class="text-center text-md-start me-md-5 mb-4 mb-md-0 d-flex flex-column align-items-center">
+                <img src="/img/logo.png" style="width: 15em;" alt="logo" class="mb-2">
+                <h4 class="mt-3 mb-2">Welcome to LEGO Control!</h4>
             </div>
+
+            <form action="/login" method="post" class="w-100" style="max-width: 400px;">
+                <div class="form-outline mb-3">
+                    <label class="form-label" for="identifier">Username or Email</label>
+                    <input type="text" id="identifier" name="identifier" class="form-control"
+                        placeholder="Enter your username or email" required />
+                </div>
+                <div class="form-outline mb-3">
+                    <label class="form-label" for="password">Password</label>
+                    <input type="password" id="password" name="password" class="form-control"
+                        placeholder="Enter your Password" required />
+                </div>
+                <div class="text-center pt-1 mb-1 pb-1">
+                    <button class="btn btn-dark btn-block" type="submit">Login</button>
+                </div>
+                <div class="text-center mb-1">
+                    <a class="text-muted" href="javascript:void(0);" id="forgotPasswordLink">Forgot password?</a>
+                </div>
+                <div class="text-center">
+                    <a class="text-muted" href="javascript:void(0);" id="signupLink" data-bs-toggle="modal"
+                        data-bs-target="#signupModal">Don't have an account?</a>
+                </div>
+            </form>
+
 
             <!-- Forgot Password part 1 - Enter email for reset password link Pop-Up Modal -->
             <div class="modal fade" id="enterEmailModal" tabindex="-1" aria-labelledby="enterEmailModalLabel"
@@ -66,36 +55,7 @@
                 </div>
             </div>
 
-            <!-- Forgot Password part 2 - Enter Security Question Answer Pop-Up Modal -->
-            <div class="modal fade" id="forgotPasswordModal" tabindex="-1" aria-labelledby="forgotPasswordModalLabel"
-                aria-hidden="true">
-                <div class="modal-dialog">
-                    <div class="modal-content rounded-4 shadow-lg">
-                        <div class="modal-header">
-                            <h5 class="modal-title" id="forgotPasswordModalLabel">Forgot Password</h5>
-                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                        </div>
-                        <div class="modal-body">
-                            <form id="forgot-password-form" action="/forgot" method="post">
-                                <div class="mb-3">
-                                    <label for="securityQuestion" class="form-label">Security Question</label>
-                                    <p id="securityQuestion"></p>
-                                </div>
-                                <div class="mb-3">
-                                    <label for="forgot-security-answer" class="form-label">Security Answer</label>
-                                    <input type="text" id="forgot-security-answer" name="securityAnswer"
-                                        class="form-control" placeholder="Enter your security answer" required />
-                                </div>
-                                <div class="d-flex justify-content-center">
-                                    <button type="submit" class="btn btn-primary mt-3">Submit</button>
-                                </div>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Forgot Password part 3 - Email Sent Success Pop-Up Modal -->
+            <!-- Forgot Password part 2 - Email Sent Success Pop-Up Modal -->
             <div class="modal modal-sheet position-fixed top-0 start-0 p-4 py-md-5" tabindex="-1" role="dialog"
                 id="modalForgot">
                 <div class="modal-dialog" role="document">
@@ -132,7 +92,6 @@
                             <form id="signup-form" action="/signup" method="post">
                                 <div class="mb-3">
                                     <label for="signup-username" class="form-label">Username</label>
-                                    <!-- Use form-label for better accessibility -->
                                     <input type="text" id="signup-username" name="username" class="form-control"
                                         placeholder="Enter your Username" required />
                                 </div>
@@ -146,7 +105,7 @@
                                     <input type="password" id="signup-password" name="password" class="form-control"
                                         placeholder="Choose a Password" required />
                                 </div>
-                                <div class="d-flex justify-content-center"> <!-- Center align the button -->
+                                <div class="d-flex justify-content-center">
                                     <button type="submit" class="btn btn-primary mt-3">Sign Up</button>
                                 </div>
                             </form>
