--- a/views/template/footer.ejs
+++ b/views/template/footer.ejs
@@ -1,19 +1,20 @@
-    <!-- Footer (Bootstrap template) -->
-    <footer class="text-center text-lg-start fixed-bottom" style="background-color: transparent; pointer-events: none;">
-        <div class="text-center p-1" style="color: white;">
-            © 2025 Copyright: LEGO Control
-        </div>
-    </footer>
+<!-- Footer (Bootstrap template) -->
+<footer class="text-center text-lg-start fixed-bottom" style="background-color: transparent; pointer-events: none;">
+    <div class="text-center p-1" style="color: white;">
+        © 2025 Copyright: LEGO Control
+    </div>
+</footer>
 
-    <!-- Optional JavaScript -->
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<!-- Optional JavaScript -->
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
 
-    <!-- Non min version -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.js"></script>
-    <script src="/js/client.js"></script>
+<!-- Non min version -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.js"></script>
+<script src="/js/client.js"></script>
 
 </body>
 
