modal should align mid

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,11 +29,10 @@
                 </div>
             </form>
 
-
             <!-- Forgot Password part 1 - Enter email for reset password link Pop-Up Modal -->
             <div class="modal fade" id="enterEmailModal" tabindex="-1" aria-labelledby="enterEmailModalLabel"
                 aria-hidden="true">
-                <div class="modal-dialog">
+                <div class="modal-dialog modal-dialog-centered">
                     <div class="modal-content rounded-4 shadow-lg">
                         <div class="modal-header">
                             <h5 class="modal-title" id="enterEmailModalLabel">Enter Email</h5>
@@ -58,7 +57,7 @@
             <!-- Forgot Password part 2 - Email Sent Success Pop-Up Modal -->
             <div class="modal modal-sheet position-fixed top-0 start-0 p-4 py-md-5" tabindex="-1" role="dialog"
                 id="modalForgot">
-                <div class="modal-dialog" role="document">
+                <div class="modal-dialog modal-dialog-centered" role="document">
                     <div class="modal-content rounded-4 shadow">
                         <div class="modal-body p-5">
                             <h2 class="fw-bold mb-0">Check your email!</h2>
@@ -82,7 +81,7 @@
             <!-- Sign Up - Create an account Pop-Up Modal -->
             <div class="modal fade" id="signupModal" tabindex="-1" aria-labelledby="signupModalLabel"
                 aria-hidden="true">
-                <div class="modal-dialog">
+                <div class="modal-dialog modal-dialog-centered">
                     <div class="modal-content rounded-4 shadow-lg"> <!-- Use shadow-lg for a larger shadow -->
                         <div class="modal-header">
                             <h5 class="modal-title" id="signupModalLabel">Create Account</h5>
@@ -117,7 +116,7 @@
             <!-- Login - Entered Incorrect user/password Pop-Up Modal -->
             <div class="modal modal-sheet position-fixed top-0 start-0 p-4 py-md-5" tabindex="-1" role="dialog"
                 id="modalLoginFailed">
-                <div class="modal-dialog" role="document">
+                <div class="modal-dialog modal-dialog-centered" role="document">
                     <div class="modal-content rounded-4 shadow">
                         <div class="modal-body p-5">
                             <h2 class="fw-bold mb-0">Login Failed</h2>
@@ -144,7 +143,7 @@
             <!-- Internal Server Error Pop-Up Modal -->
             <div class="modal modal-sheet position-fixed top-0 start-0 p-4 py-md-5" tabindex="-1" role="dialog"
                 id="modalServerError">
-                <div class="modal-dialog" role="document">
+                <div class="modal-dialog modal-dialog-centered" role="document">
                     <div class="modal-content rounded-4 shadow">
                         <div class="modal-body p-5">
                             <h2 class="fw-bold mb-0">Server Error</h2>
@@ -169,7 +168,7 @@
             <!-- Sign Up - Account with that Username/Email already exists Pop-Up Modal -->
             <div class="modal modal-sheet position-fixed top-0 start-0 p-4 py-md-5" tabindex="-1" role="dialog"
                 id="modalUserExists">
-                <div class="modal-dialog" role="document">
+                <div class="modal-dialog modal-dialog-centered" role="document">
                     <div class="modal-content rounded-4 shadow">
                         <div class="modal-body p-5">
                             <h2 class="fw-bold mb-0">SignUp Failed</h2>
