--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,9 +6,18 @@
                 <div class="card bg-dark text-white">
                     <div class="card-body">
                         <div class="error-template text-center">
-                            <img src="/img/404.gif" alt="404 Error" class="img-fluid">
+                            <!-- <img src="/img/404.gif" alt="404 Error" class="img-fluid">
                             <h1 class="display-1">Good!</h1>
-                            <h2 class="display-4">Home Page Test</h2>
+                            <h2 class="display-4">Home Page Test</h2> -->
+                            <h1>Welcome to Lego Control!</h1>
+                            <p>Press the button below to start and stop recording.</p>
+
+                            <div class="d-flex justify-content-center">
+                                <button id="recordButton" class="btn btn-primary btn-lg">Start Recording</button>
+                            </div>
+
+                            <audio id="audioPlayback" controls style="display: none; margin-top: 20px;"></audio>
+
                         </div>
                     </div>
                 </div>
