--- a/views/template/footer.ejs
+++ b/views/template/footer.ejs
@@ -14,6 +14,7 @@
 
 <!-- Non min version -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.js"></script>
+<script src="/js/micControl.js"></script>
 <script src="/js/client.js"></script>
 
 </body>
