--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,4 +1,4 @@
-<%- include("template/header") %>
+<%- include("template/header-logged-in") %>
     <!-- 404 Page. Used copilot for template -->
     <div class="container mt-5">
         <div class="row justify-content-center">
