--- a/views/home.ejs
+++ b/views/home.ejs
@@ -16,8 +16,9 @@
                                 <button id="recordButton" class="btn btn-primary btn-lg">Start Recording</button>
                             </div>
 
-                            <audio id="audioPlayback" controls style="display: none; margin-top: 20px;"></audio>
-
+                            <div class="playback-container">
+                                <audio id="audioPlayback" controls style="display: none; margin-top: 20px;"></audio>
+                            </div>
                         </div>
                     </div>
                 </div>
