--- a/views/template/header-logged-in.ejs
+++ b/views/template/header-logged-in.ejs
@@ -32,7 +32,7 @@
             </button>
         </a>
         <!-- Logout Button -->
-        <a href="/logout">
+        <a href="/">
             <button type="button" class="btn btn-outline-danger">
                 <i class="bi bi-box-arrow-right"></i> Logout
             </button>
