--- a/views/home.ejs
+++ b/views/home.ejs
@@ -9,6 +9,9 @@
                             <!-- <img src="/img/404.gif" alt="404 Error" class="img-fluid">
                             <h1 class="display-1">Good!</h1>
                             <h2 class="display-4">Home Page Test</h2> -->
+                            <div>
+                                <h1>Hello, <%= greeting %>!</h1>
+                            </div>
                             <h1>Welcome to Lego Control!</h1>
                             <p>Press the button below to start and stop recording.</p>
 
