--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,4 +1,4 @@
-<%- include("template/header-logged-in") %>
+<%- include("template/header-logged-in", { isAdmin }) %>
     <!-- 404 Page. Used copilot for template -->
     <div class="container mt-5">
         <div class="row justify-content-center">
@@ -10,7 +10,13 @@
                             <h1 class="display-1">Good!</h1>
                             <h2 class="display-4">Home Page Test</h2> -->
                             <div>
-                                <h1>Hello, <%= greeting %>!</h1>
+                                <h1>
+                                    Welcome, 
+                                    <% if (isAdmin) { %> 
+                                        Admin 
+                                    <% } %> 
+                                    <%= username %>!
+                                </h1>
                             </div>
                             <h1>Welcome to Lego Control!</h1>
                             <p>Press the button below to start and stop recording.</p>
