--- a/views/template/footer.ejs
+++ b/views/template/footer.ejs
@@ -16,6 +16,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@ffmpeg/ffmpeg@0.11.5/dist/ffmpeg.min.js"></script>
 <script src="/js/micControl.js"></script>
+<script src="/js/admin.js"></script>
 <script src="/js/client.js"></script>
 
 </body>
