--- a/views/template/footer.ejs
+++ b/views/template/footer.ejs
@@ -15,6 +15,11 @@
 <!-- Non min version -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@ffmpeg/ffmpeg@0.11.5/dist/ffmpeg.min.js"></script>
+
+<!-- API -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/recorderjs/0.1.0/recorder.js"></script>
+
+<!-- Our js files -->
 <script src="/js/micControl.js"></script>
 <script src="/js/client.js"></script>
 
