--- a/public/css/index.css
+++ b/public/css/index.css
@@ -32,6 +32,36 @@
   background-color: #0056b3;
 }
 
+
+.admin-container .table {
+  width: 100%;
+  table-layout: fixed;  /* Ensures columns are evenly distributed */
+}
+.admin-container .table tbody {
+  /* display:  grid; */
+  max-height: 400px;  /* Set the desired max height */
+  overflow-y: auto;   /* Enable vertical scrolling */
+  overflow-x: hidden; 
+  width: 100%;
+  height: 400px; /* Optional: you can adjust the height */
+  position: relative;
+}
+
+.user-list-container {
+  max-height: 400px; /* Adjust the height as needed */
+  overflow-y: auto;  /* Enables vertical scrolling */
+  border: 1px solid #ccc; /* Optional: adds a border */
+  padding: 10px;
+  border-radius: 5px; /* Optional: rounded corners */
+}
+
+.admin-container .table thead {
+  /* display: block; */
+  width: 100%;
+  table-layout: fixed;
+}
+
+
 /* Admin Results Section */
 .admin-results-container {
   margin-top: 40px;
