--- a/views/template/header-logged-in.ejs
+++ b/views/template/header-logged-in.ejs
@@ -35,7 +35,7 @@
         <% if (isAdmin) { %> 
             <!-- Admin Panel Button (Visible Only to Admins) -->
             <a href="/admin">
-                <button type="button" class="btn btn-outline-danger">
+                <button type="button" class="btn btn-outline-success">
                     <i class="bi bi-tools"></i> Admin Panel
                 </button>
             </a>
