--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,17 +6,8 @@
                 <div class="card bg-dark text-white">
                     <div class="card-body">
                         <div class="error-template text-center">
-                            <!-- <img src="/img/404.gif" alt="404 Error" class="img-fluid">
-                            <h1 class="display-1">Good!</h1>
-                            <h2 class="display-4">Home Page Test</h2> -->
                             <div>
-                                <h1>
-                                    Welcome, 
-                                    <% if (isAdmin) { %> 
-                                        Admin 
-                                    <% } %> 
-                                    <%= username %>!
-                                </h1>
+                                <h1 id="welcomeText">Welcome!</h1>
                             </div>
                             <h1>Welcome to Lego Control!</h1>
                             <p>Press the button below to start and stop recording.</p>
