fix credential things

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,13 +7,7 @@
                     <div class="card-body">
                         <div class="error-template text-center">
                             <div>
-                                <h1>
-                                    Welcome, 
-                                    <% if (isAdmin) { %> 
-                                        Admin 
-                                    <% } %> 
-                                    <%= username %>!
-                                </h1>
+                                <h1 id="welcomeText">Welcome!</h1>
                             </div>
                             <h1>Welcome to Lego Control!</h1>
                             <p>Press the button below to start and stop recording.</p>
