--- a/views/template/header-logged-in.ejs
+++ b/views/template/header-logged-in.ejs
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="/css/index.css">
 </head>
 
-<body>
+<body id="<%= pageId || '' %>">
 
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-dark">
@@ -46,5 +46,4 @@
             </button>
         </a>
     </nav>
-
-    <body>
+<body>
