--- a/views/home.ejs
+++ b/views/home.ejs
@@ -13,7 +13,7 @@
                             <p>Press the button below to start and stop recording.</p>
 
                             <div class="d-flex justify-content-center">
-                                <button id="recordButton" class="btn btn-primary btn-lg">Start Recording</button>
+                                <button id="recordButton" class="btn btn-primary btn-lg">Start Recording!</button>
                             </div>
 
                             <div class="playback-container">
