did you pray today

--- a/views/template/header-logged-in.ejs
+++ b/views/template/header-logged-in.ejs
@@ -32,8 +32,9 @@
             </button>
         </a>
 
-        <!-- Admin Panel Button (Visible Only to Admins) -->
-        <a href="/admin" id="adminPanelLink" style="display: none;">
+        <!-- Admin Panel Button (Visible Only to Admins) href="/admin" -->
+         
+        <a id="adminPanelLink" style="display: none;">
             <button type="button" class="btn btn-outline-danger">
                 <i class="bi bi-tools"></i> Admin Panel
             </button>
