fix reset password

--- a/views/resetPassword.ejs
+++ b/views/resetPassword.ejs
@@ -24,9 +24,10 @@
                     <img src="/img/reset.png" alt="Success Icon" class="mb-4 img-fluid">
                     <h2 class="fw-bold mb-4">Password Reset!</h2>
                     <p class="mb-4 fs-5">Your password has been reset successfully.</p>
-                    <button id="modalButton" type="button" class="btn btn-lg btn-primary">Continue</button>
+                    <button id="modalButton" type="button" class="btn btn-lg btn-primary"
+                        onclick="window.location.href='/'">Continue</button>
                 </div>
             </div>
         </div>
     </div>
-    <%- include("template/footer") %>
+<%- include("template/footer") %>
