--- a/views/template/header.ejs
+++ b/views/template/header.ejs
@@ -5,6 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Content-Security-Policy" content="
+    default-src 'self'; 
+    font-src 'self' https://comp4537-project-5ddxc.ondigitalocean.app https://fonts.googleapis.com https://fonts.gstatic.com; 
+    style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
+    script-src 'self' https://code.jquery.com https://cdn.jsdelivr.net https://cdnjs.cloudflare.com;
+    img-src 'self' data:;">
+
     <link href= "/img/icon.ico" rel="icon" type="image/x-icon"/>
     <title>LEGO Control</title>
 
